# agentic-rag-router

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  VERIFICATION.md  docker-compose.yml  pyproject.toml
.claude/rules/: architecture.md  commit.md  sdd.md  testing.md
.claude/skills/add-adapter/: SKILL.md  _adapter_template.py
.claude/skills/eval-runner/: SKILL.md  _reference_run_eval.py
.claude/skills/ship-release/: SKILL.md
.claude/skills/write-handoff/: SKILL.md
.github/workflows/: ci.yml  smoke.yml
data/eval/: golden_questions.jsonl  holdout_questions.jsonl  redteam_questions.jsonl
docs/: DATA_SOURCES.md  EVAL_RUBRIC.md  HOLDOUT_AND_REDTEAM.md
eval/: EVAL_REPORT.md  holdout_report.json  holdout_report.md  redteam_report.json  redteam_report.md  report.json
examples/: 01_single_adapter.py  02_fallback_demo.py  03_custom_stack.py
scripts/: __init__.py  _corpus_parse.py  _db.py  _taxi_mapping.py  check_version_parity.py  ingest_corpus.py  ingest_taxi.py  init_db.py  refusal_probe.py  route_probe.py  run_eval.py  run_holdout_eval.py  smoke.sh
src/agentic_rag_router/: __init__.py  main.py
src/agentic_rag_router/api/: __init__.py  app.py
src/agentic_rag_router/application/: fallback.py  ports.py
src/agentic_rag_router/domain/: errors.py  llm.py
src/agentic_rag_router/eval/: __init__.py  scoring.py
src/agentic_rag_router/infrastructure/: anthropic_adapter.py  ollama_adapter.py  openai_adapter.py  settings.py
src/agentic_rag_router/router/: __init__.py  client.py  dispatch.py  grading.py  loop.py  schema.py
src/agentic_rag_router/tools/: __init__.py  envelope.py  sql_query.py  vector_search.py  web_search.py
tests/: test_eval_gates.py  test_eval_set_frozen.py
tests/contract/: conftest.py  fakes.py  test_llm_port.py
tests/integration/: test_data_layer.py  test_tools.py
tests/live/: test_router_live.py
tests/replay/: __init__.py  conftest.py  test_router_replay.py
tests/replay/cassettes/test_router_replay/: test_answerable_taxi_question_is_answered_with_a_citation.yaml  test_unanswerable_future_question_is_refused_with_zero_citations.yaml
tests/unit/: test_main.py
tests/unit/api/: test_app.py
tests/unit/application/: test_fallback.py  test_ports.py
tests/unit/data/: test_corpus_parse.py  test_db_params.py  test_taxi_mapping.py
tests/unit/domain/: test_llm.py
tests/unit/eval/: test_scoring.py
tests/unit/infrastructure/: test_anthropic_adapter.py  test_ollama_adapter.py  test_openai_adapter.py  test_settings.py
tests/unit/router/: fakes.py  test_client.py  test_dispatch.py  test_grading.py  test_loop.py  test_schema.py
tests/unit/tools/: conftest.py  fakes.py  test_envelope.py  test_sql_query.py  test_vector_search.py  test_web_search.py
tests/unit/tools/cassettes/test_web_search/: test_web_search_replays_recorded_cassette.yaml
